force-app/main/default/objects/gmpkg__GanttTask__c/gmpkg__GanttTask__c.object-meta.xml
<CustomObject>
    <label>GanttTask</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GanttTasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>