force-app/main/default/objects/gmpkg__GanttTask__c/fields/gmpkg__EndDate__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__EndDate__c</fullName>
    <label>EndDate</label>
    <type>DateTime</type>
</CustomField>