force-app/main/default/objects/gmpkg__GanttTask__c/fields/gmpkg__Order__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Order__c</fullName>
    <label>Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>