force-app/main/default/objects/gmpkg__GanttTask__c/fields/gmpkg__Parent__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>gmpkg__GanttTask__c</referenceTo>
    <relationshipLabel>GanttTasks</relationshipLabel>
    <relationshipName>GanttTasks</relationshipName>
    <type>Lookup</type>
</CustomField>