force-app/main/default/objects/gmpkg__GanttTask__c/fields/gmpkg__Progress__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Progress__c</fullName>
    <label>Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>