force-app/main/default/objects/gmpkg__GanttTask__c/fields/gmpkg__Project__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Project__c</fullName>
    <label>Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>