force-app/main/default/objects/gmpkg__GanttTask__c/fields/gmpkg__StartDate__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__StartDate__c</fullName>
    <label>StartDate</label>
    <type>DateTime</type>
</CustomField>